Fixed alignment issue in nav menu

--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,7 @@ header nav ul{
   display: flex;
   justify-content:space-between;
   width: 45%;
+  padding-left: 0;
 }
 
 header nav ul li{
